gedcom/tests/snapshots/tests__encodings@utf16le_specified_incorrect.ged-2.snap
---
source: gedcom/tests/tests.rs
description: "0 HEAD\r\n1 CHAR UNICODE\r\n0 TRLR\r\n"
expression: "format!(\"{:?}\", err.with_source_code(NamedSource::new(filename, data)))"
input_file: gedcom/tests/encoding_inputs/utf16le_specified_incorrect.ged
---
gedcom::encoding::utf16_mismatch

  × GEDCOM header specifies UNICODE encoding, but file is not encoded in UTF-16
   ╭─[utf16le_specified_incorrect.ged:2:8]
 1 │ 0 HEAD
 2 │ 1 CHAR UNICODE
   ·        ───┬───
   ·           ╰── encoding was specified here
 3 │ 0 TRLR
   ╰────
