gedcom/tests/snapshots/tests__encodings@utf8_assumedversion.ged.snap
---
source: gedcom/tests/tests.rs
description: "0 HEAD\r\n1 GEDC\r\n2 VERS 7.0\r\n0 TRLR\r\n"
expression: encoding_report
input_file: gedcom/tests/encoding_inputs/utf8_assumedversion.ged
---
Encoding detected: UTF-8
Reason: encoding was determined by GEDCOM version; v7 must always be UTF-8
