gedcom/tests/snapshots/tests__encodings@utf8_assumedversion_malformed.ged-2.snap
---
source: gedcom/tests/tests.rs
description: "0 HEAD\r\n1 GEDC\r\n2 VERS 7.0\r\n0 TEXT h�3�ré\r\n0 TRLR\r\n"
expression: "format!(\"{:?}\", err.with_source_code(NamedSource::new(filename, data)))"
input_file: gedcom/tests/encoding_inputs/utf8_assumedversion_malformed.ged
---
gedcom::encoding::invalid_data

  × Invalid data in GEDCOM file
  ╰─▶ invalid utf-8 sequence of 1 bytes from index 36
   ╭─[utf8_assumedversion_malformed.ged:4:9]
 3 │ 2 VERS 7.0
 4 │ 0 TEXT h�3�ré
   ·         ┬
   ·         ╰── this is not valid data for the encoding UTF-8
 5 │ 0 TRLR
   ╰────

Advice: gedcom::encoding_reason::version

  ☞ encoding was determined by GEDCOM version; v7 must always be UTF-8
   ╭─[utf8_assumedversion_malformed.ged:3:8]
 2 │ 1 GEDC
 3 │ 2 VERS 7.0
   ·        ─┬─
   ·         ╰── version was specified here
 4 │ 0 TEXT h�3�ré
   ╰────
