gedcom/tests/snapshots/tests__encodings@utf8_assumedversion_malformed.ged.snap
---
source: gedcom/tests/tests.rs
description: "0 HEAD\r\n1 GEDC\r\n2 VERS 7.0\r\n0 TEXT h�3�ré\r\n0 TRLR\r\n"
expression: encoding_report
input_file: gedcom/tests/encoding_inputs/utf8_assumedversion_malformed.ged
---
Encoding detected: UTF-8
Reason: this encoding is required by GEDCOM version 7.0
