gedcom/tests/snapshots/tests__encodings@utf8_bom_malformed.ged.snap
---
source: gedcom/tests/tests.rs
description: "﻿0 HEAD\r\n0 MALFORMED h�x�ré\r\n"
expression: encoding_report
input_file: gedcom/tests/encoding_inputs/utf8_bom_malformed.ged
---
Encoding detected: UTF-8
Reason: encoding was detected from the byte-order mark (BOM)
