gedcom/tests/snapshots/tests__encodings@utf8_specified.ged.snap
---
source: gedcom/tests/tests.rs
description: "0 HEAD\r\n1 GEDC\r\n2 CHAR UTF8\r\n0 TRLR\r\n"
expression: encoding_report
input_file: gedcom/tests/encoding_inputs/utf8_specified.ged
---
Unable to determine encoding of GEDCOM file
